Improve maintainability