@@ -20,53 +20,56 @@ public class IntroduceReplacerPipeFromFixedResultPipeVisitor extends XmlIsoVisit
         if (tag.getName().equalsIgnoreCase("pipeline")) {
             AtomicBoolean changed = new AtomicBoolean(false);
             List<Content> updatedChildren = getContent(tag).stream().map(content -> {
-                if (content instanceof Xml.Tag child) {
-                    if (child.getName().equals("FixedResultPipe") && TagHandler.hasAnyAttributeWithKey(child, "replaceFrom")&& TagHandler.hasAnyAttributeWithKey(child, "replaceTo")) {
-                        String replaceFromValue = TagHandler.getAttributeValueFromTagByKey(child, "replaceFrom").orElse("");
-                        String replaceToValue = TagHandler.getAttributeValueFromTagByKey(child, "replaceTo").orElse("");
-                        String pipeName = "myReplacerPipe"+ (amountRefactored!=1?amountRefactored:"");
+                if (content instanceof Xml.Tag child
+                    && child.getName().equals("FixedResultPipe")
+                    && TagHandler.hasAnyAttributeWithKey(child, "replaceFrom")
+                    && TagHandler.hasAnyAttributeWithKey(child, "replaceTo")) {
 
-                        // Remove returnString attribute
-                        child = child.withAttributes(
-                                child.getAttributes().stream()
-                                        .filter(attr -> !attr.getKeyAsString().equals("replaceFrom")&&!attr.getKeyAsString().equals("replaceTo"))
-                                        .collect(Collectors.toList())
-                        );
+                    String replaceFromValue = TagHandler.getAttributeValueFromTagByKey(child, "replaceFrom").orElse("");
+                    String replaceToValue = TagHandler.getAttributeValueFromTagByKey(child, "replaceTo").orElse("");
+                    String pipeName = "myReplacerPipe"+ (amountRefactored!=1?amountRefactored:"");
 
-                        child = TagHandler.getTagWithoutAttribute(child,"replaceFrom");
-                        child = TagHandler.getTagWithoutAttribute(child,"replaceTo");
-                        List<Content> childContent = getContent(child).stream()
-                                .map(grandchild -> {
-                                    if (grandchild instanceof Xml.Tag && ((Xml.Tag) grandchild).getName().equalsIgnoreCase("forward")) {
-                                        return ((Xml.Tag) grandchild).withAttributes(
-                                                ((Xml.Tag) grandchild).getAttributes().stream()
-                                                        .map(attr -> attr.getKeyAsString().equals("path") ? attr.withValue(attr.getValue().withValue(pipeName)) : attr)
-                                                        .collect(Collectors.toList())
-                                        );
-                                    }
-                                    return grandchild;
-                                })
-                                .collect(Collectors.toList());
-                        String pathValue =getContent(child).stream()
-                                .filter(grandchild -> grandchild instanceof Xml.Tag && ((Xml.Tag) grandchild).getName().equalsIgnoreCase("forward")).map(t->TagHandler.getAttributeValueFromTagByKey((Xml.Tag)t,"path")).findFirst().get().orElse("");
+                    // Remove returnString attribute
+                    child = child.withAttributes(
+                            child.getAttributes().stream()
+                                    .filter(attr -> !attr.getKeyAsString().equals("replaceFrom")&&!attr.getKeyAsString().equals("replaceTo"))
+                                    .toList()
+                    );
 
-                        // Update forward path
-                        child = child.withContent(
-                                childContent
-                        );
+                    child = TagHandler.getTagWithoutAttribute(child,"replaceFrom");
+                    child = TagHandler.getTagWithoutAttribute(child,"replaceTo");
+                    List<Content> childContent = getContent(child).stream()
+                            .map(grandchild -> {
+                                if (grandchild instanceof Xml.Tag t && t.getName().equalsIgnoreCase("forward")) {
+                                    return t.withAttributes(
+                                            t.getAttributes().stream()
+                                                    .map(attr -> attr.getKeyAsString().equals("path") ? attr.withValue(attr.getValue().withValue(pipeName)) : attr)
+                                                    .toList()
+                                    );
+                                }
+                                return grandchild;
+                            })
+                            .toList();
+                    String pathValue =getContent(child).stream()
+                            .filter(grandchild -> grandchild instanceof Xml.Tag t && t.getName().equalsIgnoreCase("forward")).map(t->TagHandler.getAttributeValueFromTagByKey((Xml.Tag)t,"path")).findFirst().get().orElse("");
 
-                        // Create new EchoPipe element
-                        Xml.Tag echoPipe = Xml.Tag.build(
-                                "<ReplacerPipe name=\"" + pipeName + "\" find=\"" + replaceFromValue + "\" replace=\"" + replaceToValue + "\">" +
-                                        "<forward name=\"success\" path=\""+pathValue+"\"/>" +
-                                        "</ReplacerPipe>"
-                        );
-                        amountRefactored++;
-                        changed.set(true);
+                    // Update forward path
+                    child = child.withContent(
+                            childContent
+                    );
 
-                        return List.of(child, echoPipe);
-                    }
+                    // Create new EchoPipe element
+                    Xml.Tag echoPipe = Xml.Tag.build(
+                            "<ReplacerPipe name=\"" + pipeName + "\" find=\"" + replaceFromValue + "\" replace=\"" + replaceToValue + "\">" +
+                                    "<forward name=\"success\" path=\""+pathValue+"\"/>" +
+                                    "</ReplacerPipe>"
+                    );
+                    increaseAmountRefactored();
+                    changed.set(true);
+
+                    return List.of(child, echoPipe);
                 }
+
                 return List.of(content);
             }).flatMap(List::stream).collect(Collectors.toList());
 
@@ -75,4 +78,8 @@ public class IntroduceReplacerPipeFromFixedResultPipeVisitor extends XmlIsoVisit
         }
         return super.visitTag(tag, ctx);
     }
+
+    public static void increaseAmountRefactored(){
+        amountRefactored++;
+    };
 }
